--- a/code/style.css
+++ b/code/style.css
@@ -5,49 +5,65 @@ html {
 }
 */
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   background: white;
 }
 
+body {
+  font: sans-serif;
+}
+
 .website-header {
-  margin-bottom: 30px;
-  padding: 10px;
+  margin-bottom: 35px;
+  padding: 7px;
   height: 200px;
   font-size: 15px;
-  background-color: black;
+  background-color: #222;
   background-size: cover;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .website-header h1 {
-  padding: 0px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: white;
-  margin: auto 0;
-  font-size: 45px;
+  font-size: 25px;
 }
 
 .website-header img {
-  height: 140px;
-  width: ;
+  margin: 80px 10px;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  display: none;
 }
 
 nav {
-  height: 30%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 3%;
   padding-right: 3%;
 }
 
-nav ul li {
+.menu li {
+  margin-left: 100px;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
   list-style-type: none;
-  display: inline-block;
-  padding: 40px 50px;
+  list-style-position: inside;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3px;
 }
 
 nav ul li a {
@@ -62,17 +78,18 @@ nav ul li a:hover {
 }
 
 button {
+  display: none;
   border: none;
   background: gray;
   border: 12px 30px;
   border-radius: 30px;
   color: white;
   font-style: bold;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 button:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
   cursor: pointer;
   transition: 0.3s;
 }
@@ -83,7 +100,7 @@ button:hover {
   margin-bottom: 30px;
   position: relative;
   text-align: left;
-  background: black;
+  background: #222;
   width: 80%;
   height: 500px;
 }
@@ -92,16 +109,18 @@ button:hover {
   font-size: 16px;
   padding: 40px 30px;
   color: white;
+  display: none;
 }
 
 .big-news h2 {
-  font-size: 2em;
-  justify-items: center;
+  font-size: 30px;
+  justify-content: center;
   left: 10px;
-  right: 350px;
+  right: 10px;
   color: white;
   position: absolute;
   font-weight: bold;
+  bottom: 0;
   /*background-image: linear-gradient(
     to top,
     rgba(0, 0, 0, 1) 5%,
@@ -111,8 +130,12 @@ button:hover {
   ); */
 }
 
+.big-news h3 {
+  display: none;
+}
+
 .big-news img {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-position: center;
   opacity: 0.5;
@@ -136,6 +159,7 @@ button:hover {
 */
 
 .grid-parent {
+  margin-top: 50px;
   justify-items: center;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -150,7 +174,7 @@ button:hover {
 }
 
 .grid-image {
-  min-height: 100px;
+  max-height: 100%;
 }
 
 .grid-item p {
@@ -158,9 +182,20 @@ button:hover {
   background: white;
 }
 
+.grid-item p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .grid-item h3 {
-  padding-top: ;
   background: white;
+  font-style: BOLDER;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.grid-item h3:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .grid-item {
@@ -187,21 +222,30 @@ button:hover {
 */
 
 .grid-item img:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition: 0.7s;
   cursor: pointer;
 }
 
 .website-footer {
+  margin-top: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: white;
-  background-color: black;
+  background-color: #222;
   height: 300px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .website-footer h4 {
-  padding-top: 30px;
-  font-size: 30px;
+  padding-top: 60px;
+  font-size: 20px;
   text-align: center;
+}
+
+.email {
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
@@ -218,15 +262,127 @@ button:hover {
   .website-header {
     height: 150px;
   }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  .website-header {
+    margin-bottom: 35px;
+    padding: 7px;
+    height: 150px;
+    font-size: 15px;
+    background-color: #222;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .website-header h1 {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 25px;
+  }
+
+  .website-header img {
+    margin: 80px 10px;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    display: none;
+  }
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .menu li {
+    font-size: 16px;
+    list-style-type: none;
+    display: inline-block;
+    padding: 15px 30px;
+  }
+
+  nav ul li a {
+    color: gray;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  nav ul li a:hover {
+    color: white;
+    transition: 0.3s;
+  }
+
+  button {
+    display: inline;
+    border: none;
+    background: gray;
+    border: 12px 30px;
+    border-radius: 30px;
+    color: white;
+    font-style: bold;
+    font-size: 16px;
+  }
+
+  button:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
   .grid-parent {
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    column-gap: 10px;
+    column-gap: 20px;
     row-gap: 10px;
     width: 80%;
+  }
+  .big-news img {
+    width: 50%;
+    height: 100%;
+    background-position: center;
+    opacity: 0.5;
+  }
+  .big-news h2 {
+    font-size: 2em;
+    justify-items: center;
+    width: 45%;
+    left: 10px;
+    right: 350px;
+    color: white;
+    position: absolute;
+    font-weight: bold;
+  }
+  .big-news h2:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .big-news p {
+    display: block;
+    align-items: center;
+    justify-items: center;
+    font-size: 18px;
+  }
+  .big-news h3 {
+    display: block;
+    position: absolute;
+    color: white;
+    margin-left: 52%;
+    margin-top: 20%;
+    font-style: oblique;
   }
   img {
   }
