--- a/code/style.css
+++ b/code/style.css
@@ -147,41 +147,47 @@ h2 {
   margin: 0;
 }
 
-/* medium news */
+/* medium news with small box */
 .medium-news {
   display: flex;
   flex-direction: column;
 }
 
-.small-img {
-  width: 280px;
-  padding: 0 20px 0 0;
-  margin: 8px 0;
-}
-
 .small-box {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: center;
+  align-content: stretch;
   height: 250px;
   background-color: #47bfb1;
   margin: 8px 0;
 }
 
+.small-img {
+  width: 270px;
+  padding: 0;
+  margin: 8px 0;
+}
 
 h4 {
-
+  width: 235px;
+  height: 30px;
   font-size: 15px;
   color: #fff;
   text-align: left;
-  padding: 8px 0;
+  padding: 0 40px 0 10px;
   margin: 0;
 }
 
 .p-medium {
-  display: flex;
-  flex-direction: column;
+  width: 225px;
   font-size: 14px;
   font-weight: 300;
   color: #fff;
+  padding: 0 40px 0 10px;
+  margin: 0;
 }
 
 .medium-box {
@@ -209,8 +215,6 @@ h3 {
   padding: 0 20px 10px 20px;
   margin: 0;
 }
-
-
 
 
 /* the end of story ie footer */
@@ -288,6 +292,7 @@ footer {
     margin: 8px;
   }
 
+  /* medium news with small box tablet */
   .medium-news {
     display: flex;
     flex-direction: row;
@@ -299,33 +304,33 @@ footer {
   .small-box {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
     width: 25%;
     height: 280px;
-    background-color:#47bfb1;
     border: solid #47bfb1 8px;
     margin: 0;
   }
 
   .small-img {
     width: 100%;
+    height: 100%;
     margin: 0 0 10px 0;
   }
 
+  h4 {
+    width: fit-content;
+    padding: 0 0 8px 0;
+  }
+
   .p-medium {
-    font-size: 14px;
-    font-weight: 300;
-    color: #fff;
-    margin: 0;
+    max-width: fit-content;
+    padding: 0 0 8px 0;
   }
 
   .medium-box {
     width: 75%;
     height: 240px;
-    background-image: url(./img/tatto.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     border: solid #47bfb1 8px;
     padding: 20px 40px;
     margin: 0;
@@ -346,9 +351,34 @@ footer {
       width: 40%;
   }
 
+/* grid for desktop */
   .grid-parent {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 2px;
     margin: 8px;
+}
+
+ /* medium news with small box desktop */
+  .medium-news {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 8px;
+    gap: 8px;
+}
+  .small-box {
+    max-width: 220px;
+    height: 300px;
+    padding: 20px 0;
+}
+   .small-img {
+    max-width: 220px;
+    height: 300px;
+    margin: 0 0 10px 0;
+}
+  .medium-box {
+    width: 75%;
+    height: 300px;
+    margin: 0;
 }
 }
