added desicriptions of the assignment, changed the amount of text in article columns, added code for web's responsiveness on all tabs

--- a/code/style.css
+++ b/code/style.css
@@ -143,6 +143,12 @@ button {
   
 }
 
+.picturearticle {
+
+    max-width: 250px;
+  
+}
+
 footer {
 
   text-align: center;
@@ -177,7 +183,3 @@ h3 {
 
     color: black;
   }
-
-  
-
- 
