--- a/code/style.css
+++ b/code/style.css
@@ -203,7 +203,7 @@ footer img{
             font-size: 19px;
             margin-bottom: 0;
             margin-right: 40px;
-            display: inline-block;
+            display: inline;
           }
           .bignewspicture {
             width: 300px;
@@ -263,7 +263,7 @@ footer img{
             gap: 10px;
           }
           h1 {
-            margin-top: 60px;
+            margin-top: 50px;
             margin-bottom: 50px;
             font-size: 50px;
           }
@@ -275,18 +275,18 @@ footer img{
             grid-row: span 1;
             display: grid;
             text-align: center, right;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 30% 70%;
             column-gap: 40px;
           }
           .bignewstext {
-            font-size: 30px;
+            font-size: 25px;
             margin-bottom: 20px;
             margin-right: 40px;
-            display: inline-block;
+            display: 
           }
           .bignewspicture {
-            width: 600px;
-            height: 500px;
+            width: 300px;
+            height: 100%;
             margin-bottom: 0;
           }
           
