changed the links with hover effect

--- a/code/style.css
+++ b/code/style.css
@@ -83,6 +83,10 @@ h1 {
   font-size: 50px;
 }
 
+h1:hover {
+  background-color: #fbcc33;;
+}
+
 .bignewstext {
   font-size: 16px;
   margin-bottom: 20px;
@@ -114,6 +118,10 @@ h1 {
 h2 {
   font-size: 20px;
   margin-top: 10px;
+}
+
+h2:hover {
+  background-color: #fbcc33;;
 }
 
 .morenewstext {
@@ -213,9 +221,9 @@ footer img{
           nav {
             margin-top: 40px;
             font-family: Arial;
-            font-size: 20;
+            font-size: 19px;
             font-style: black;
-            font-weight: bolder;
+            font-weight: bold;
             display: inline;
           }
       }
