changed color on h1

--- a/code/style.css
+++ b/code/style.css
@@ -83,10 +83,6 @@ h1 {
   font-size: 50px;
 }
 
-h1:hover {
-  background-color: #fbcc33;
-}
-
 .bignewstext {
   font-size: 16px;
   margin-bottom: 20px;
@@ -154,7 +150,7 @@ footer img{
           }
           .logo {
             position: center;
-            display: flex;
+            display: block;
           }
           .more-news-grid {
             padding: 10px;
