added hr boarder

--- a/code/style.css
+++ b/code/style.css
@@ -51,6 +51,12 @@ a:active {
   text-decoration: none;
 }
 
+hr {
+  border: none;
+  height: 1px;
+  background: black;
+}
+
 /* Grid starts with the main news and h1 followed by more newscards bellow with h2 */
 
 .grid-parent {
