--- a/code/style.css
+++ b/code/style.css
@@ -103,7 +103,14 @@ img {
   margin: 10px;
 }
 
-
+/* Jennies förslag på main styling - which means below 668 since you do mobile first approach */
+.small-mama-news {
+  display: grid;
+  grid-template-columns: 1fr;
+  /* 1 cols, evenly sized */
+  gap: 4px;
+  /* gap is the space between the items */
+}
 
 
 
@@ -134,10 +141,6 @@ img {
        display: none;
      }
 
-    .big-news {
-      display: grid;
-    }
-
         a {
           text-decoration: none;
           color: #fff;
@@ -146,33 +149,13 @@ img {
         li {
           list-style: none;
         }
-    
-        .big-news {
-          display: grid;
-          grid-template-columns: repeat(8, 1fr);
-          grid-template-rows: repeat(3, 100px);
-          gap: 10px;
+       /* Jennies förslag for tablet */
+       
+       .big-mama-news {
+          grid-template-columns: 1fr 1fr;
+          /* 2 cols, evenly sized */
         }
-    
-        .grid-item {
-          background: pink;
-        }
-    
-        .grid-item-1 {
-          grid-column: span 8;
-        }
-    
-        .grid-item-2 {
-          grid-column: span 4;
-        }
-    
-        .grid-item-3 {
-          grid-column: span 12;
-        }
-    
-        img {
-          width: 200px;
-        }
+  
 }
 
 
@@ -209,44 +192,17 @@ li {
   list-style: none;
 }
 
-.big-news {
+/* Jennies förslag för media query for desktop */
+
+.big-mama-news {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* 4 cols, evenly sized */
+}
+
+.small-mama-news {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(3, 5vw);
-  gap: 15px;
-}
-
-.grid__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.big-news-item {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.grid-item-1 {
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-start: 1;
-        grid-row-end: 3;
-  }
-
-.grid-item-2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.grid-item-3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 6;
-}
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* 4 cols, evenly sized */
+  gap: 4px;
+  /* gap is the space between the items */
 }
